classDiagram
    class User {
        +UUID id
        +String username
        +String email
        +UserStatus status
        +validateEmail()
        +activate()
        +suspend()
    }
    
    class Order {
        +UUID id
        +UUID userId
        +Float total
        +OrderStatus status
        +processOrder()
        +cancel()
    }
    
    class Product {
        +UUID id
        +String name
        +Float price
        +String category
        +updatePrice()
    }
    
    User "1" --> "*" Order
    Order "*" --> "*" Product